# c-utils

./: .gitattributes  .gitignore  CMakeLists.txt  TODO.md  compile_commands.json  xmake.lua
include/: string_impl.h  string_utils.h
src/: main.c  string_impl.c  string_utils.c
